[gd_scene load_steps=5 format=2]

[ext_resource path="res://Walking_Player.gd" type="Script" id=1]
[ext_resource path="res://Gismos.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 8.12969

[node name="Walking_Player" type="KinematicBody2D"]
scale = Vector2( 0.469541, 0.469541 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.51895 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="RayFront" type="RayCast2D" parent="."]
position = Vector2( 25.5569, -8 )
rotation = 0.0174533
scale = Vector2( 1, 1 )
enabled = true

[node name="RayCenter" type="RayCast2D" parent="."]
position = Vector2( 0, -8.51895 )
scale = Vector2( 1, 1 )
enabled = true

[node name="RayBack" type="RayCast2D" parent="."]
position = Vector2( -23.4271, -8 )
rotation = -0.0174533
scale = Vector2( 1, 1 )
enabled = true

[node name="Gismos" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -38.3353 )
scale = Vector2( 0.266639, 0.266639 )
texture = ExtResource( 3 )
